# KC-Community-Software-Renderer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  STYLEGUIDE.md  clip.c  gfx.c  imode.c  importer.c  main.c  makefile.linux  math.c  pl.c  pl.h
fw/: CMakeLists.txt  fw.h  fw_priv.h  pkb.c  sys.c  wvid.c  xvid.c
ma/: CMakeLists.txt  bstrap.c  ma.c  ma.h  ma_priv.h
mods/: CMakeLists.txt  modloader.c  modloader.c.in  regmod.cmake
mods/example/: CMakeLists.txt  example.c
pl/: CMakeLists.txt  clip.c  gfx.c  imode.c  importer.c  math.c  pl.h
